News UAT/force-app/main/default/objects/Social_Ad_Content__c/Social_Ad_Content__c.object-meta.xml
<CustomObject>
    <description>This object is for NewsXtend Customers who access My-Account community</description>
    <label>Proof Ad Content</label>
    <nameField>
        <displayFormat>PAC-{000000}</displayFormat>
        <label>Proof Ad Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proof Ad Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>