News UAT/force-app/main/default/objects/Social_Ad_Content__c/fields/Ad_Headline__c.field-meta.xml
<CustomField>
    <fullName>Ad_Headline__c</fullName>
    <description>This will contain tHeadline for facebook ad</description>
    <inlineHelpText>This will contain tHeadline for facebook ad</inlineHelpText>
    <label>Ad Headline</label>
    <length>250</length>
    <type>Text</type>
</CustomField>