News UAT/force-app/main/default/objects/Social_Ad_Content__c/fields/Ad_Link__c.field-meta.xml
<CustomField>
    <fullName>Ad_Link__c</fullName>
    <description>This will contain Link for facebook ad</description>
    <inlineHelpText>This will contain Link for facebook ad</inlineHelpText>
    <label>Ad Link</label>
    <length>250</length>
    <type>Text</type>
</CustomField>