News UAT/force-app/main/default/objects/Social_Ad_Content__c/fields/Ad_Newsfeed_Link_Description__c.field-meta.xml
<CustomField>
    <fullName>Ad_Newsfeed_Link_Description__c</fullName>
    <description>This will contain Newsfeed Link Description for facebook ad</description>
    <inlineHelpText>This will contain Newsfeed Link Description for facebook ad</inlineHelpText>
    <label>Ad Newsfeed Link Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>