News UAT/force-app/main/default/objects/Social_Ad_Content__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>This will contain the name of file uploaded for ad</description>
    <inlineHelpText>This will contain the name of file uploaded for ad</inlineHelpText>
    <label>File Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>