News UAT/force-app/main/default/objects/Social_Ad_Content__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <description>This will contain the size of file uploaded for ad</description>
    <inlineHelpText>This will contain the size of file uploaded for ad</inlineHelpText>
    <label>File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>