News UAT/force-app/main/default/objects/Social_Ad_Content__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <description>This will contain the type of file uploaded for ad</description>
    <inlineHelpText>This will contain the type of file uploaded for ad</inlineHelpText>
    <label>File Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>