News UAT/force-app/main/default/objects/Social_Ad_Content__c/fields/GoogleDrive_File_Id__c.field-meta.xml
<CustomField>
    <fullName>GoogleDrive_File_Id__c</fullName>
    <description>FileId for the uploaded file in google drive</description>
    <label>GoogleDrive File Id</label>
    <length>220</length>
    <type>Text</type>
</CustomField>