News UAT/force-app/main/default/objects/Social_Ad_Content__c/fields/Social_Ad__c.field-meta.xml
<CustomField>
    <fullName>Social_Ad__c</fullName>
    <label>Social Ad</label>
    <referenceTo>SocialAd__c</referenceTo>
    <relationshipName>Social_Ad_Contents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>